--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://dumbo.db.elephantsql.com/usgfgdlf
+spring.datasource.username=usgfgdlf
+spring.datasource.password=DazAYl9XM9wtdd2xFMYGm9-3HM-f5SWq
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.jakarta.persistence.validation.mode = none
