some server config and relations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://dumbo.db.elephantsql.com/usgfgdlf
-spring.datasource.username=usgfgdlf
-spring.datasource.password=DazAYl9XM9wtdd2xFMYGm9-3HM-f5SWq
+spring.datasource.url=jdbc:postgresql://141.98.112.200/yaz_muh_proje
+spring.datasource.username=yazmuhuser
+spring.datasource.password=al3anXMBnutVpE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
